fix: readability style-advanced.css

--- a/style/style-advanced copy.css
+++ b/style/style-advanced copy.css
@@ -18,11 +18,13 @@ body>.container-fluid{
 /* Each section occupies a percentage
 of the viewport */
 .nav-bar{
-  height: 6%;
+  height: 80px;
   font-size: 13px;
+  background: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
 }
 .main{
-  height: 88%;
+  height: 83%;
 }
 .footer {
   height: 6%;
@@ -35,12 +37,14 @@ of the viewport */
 /* ******************************** */
 /* NavBar */
 /* ******************************** */
+
 .nav-bar a{
   color: black;
   margin-left: 15px;
   margin-right: 15px;
 }
-.nav-bar img{
+
+.nav-bar .products{
   color: black;
   margin-left: 15px;
   margin-right: 15px;
@@ -62,6 +66,7 @@ of the viewport */
   padding: 0 12px;
   text-align: center;
 }
+
 .nav-bar .button-blue
 {
   color: #ffffff;
@@ -70,16 +75,18 @@ of the viewport */
 /* Main */
 /* ******************************** */
 .col-logo{
-  margin-top: 6%;
+  height: 70px;
+  border-bottom: solid 1px #e4e4e4;
+  margin-bottom: 20px;
 }
 .col-bar{
-  margin-top: 3%;
+  margin-top: 0%;
 }
 .col-buttons{
   margin-top: 1%;
 }
 .col-bar .search-bar{
-  width: 580px;
+  width: 480px;
   height: 30px;
   padding: 5px 10px;
   border: 0.1px solid #e4e4e4;
@@ -93,11 +100,6 @@ of the viewport */
   border: 0px;
   box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 
               0 0 0 1px rgba(0,0,0,0.08);
-}
-.col-bar input{
-  width: 510px;
-  border:0px;
-  outline: none;
 }
 .col-bar img
 {
@@ -139,4 +141,64 @@ of the viewport */
   color: #757575;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+/* ******************************** */
+/* advanced.html */
+/* *****************************s*** */
+.logo-subtext
+{
+  color: #d93025;
+  font: 20px arial, sans-serif;
+  font-weight: 400;
+  position: relative;
+  top: 25px;
+  white-space: nowrap;
+}
+
+.main input{
+  width: 100%;
+  border: solid 0.1px rgb(217, 217, 217);
+  border-radius: 0px;
+}
+
+.margins
+{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+}
+
+.criteria
+{
+  font-size: 13px;
+}
+
+.description
+{
+  color: rgb(85, 85, 85);
+  font-size: 11px;
+}
+
+.padding
+{
+  padding-left: 20px;
+}
+
+.description-bold
+{
+  color: rgb(119, 119, 119);
+  font-size: 13px;
+  font-weight: 700;;
+}
+
+.border-bottom
+{
+  border-bottom: solid 1px #e4e4e4;
+}
+
+.link a
+{
+  color: rgb(17, 34, 204);
+  font-size: 13px;
 }
