--- a/style/style-advanced.css
+++ b/style/style-advanced.css
@@ -18,13 +18,11 @@ body>.container-fluid{
 /* Each section occupies a percentage
 of the viewport */
 .nav-bar{
-  height: 80px;
+  height: 6%;
   font-size: 13px;
-  background: #f2f2f2;
-  border-top: 1px solid #e4e4e4;
 }
 .main{
-  height: 83%;
+  height: 88%;
 }
 .footer {
   height: 6%;
@@ -37,13 +35,11 @@ of the viewport */
 /* ******************************** */
 /* NavBar */
 /* ******************************** */
-
 .nav-bar a{
   color: black;
   margin-left: 15px;
   margin-right: 15px;
 }
-
 .nav-bar .products{
   color: black;
   margin-left: 15px;
@@ -66,7 +62,6 @@ of the viewport */
   padding: 0 12px;
   text-align: center;
 }
-
 .nav-bar .button-blue
 {
   color: #ffffff;
@@ -75,18 +70,16 @@ of the viewport */
 /* Main */
 /* ******************************** */
 .col-logo{
-  height: 70px;
-  border-bottom: solid 1px #e4e4e4;
-  margin-bottom: 20px;
+  margin-top: 6%;
 }
 .col-bar{
-  margin-top: 0%;
+  margin-top: 3%;
 }
 .col-buttons{
   margin-top: 1%;
 }
 .col-bar .search-bar{
-  width: 480px;
+  width: 580px;
   height: 30px;
   padding: 5px 10px;
   border: 0.1px solid #e4e4e4;
@@ -100,6 +93,11 @@ of the viewport */
   border: 0px;
   box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 
               0 0 0 1px rgba(0,0,0,0.08);
+}
+.col-bar input{
+  width: 510px;
+  border:0px;
+  outline: none;
 }
 .col-bar img
 {
@@ -146,6 +144,27 @@ of the viewport */
 /* ******************************** */
 /* advanced.html */
 /* *****************************s*** */
+.nav-bar{
+  height: 80px;
+  font-size: 13px;
+  background: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+}
+.main{
+  height: 83%;
+}
+.col-logo{
+  margin-top: 0%;
+  height: 70px;
+  border-bottom: solid 1px #e4e4e4;
+  margin-bottom: 20px;
+}
+.col-bar{
+  margin-top: 0%;
+}
+.col-bar .search-bar{
+  width: 480px;
+}
 .logo-subtext
 {
   color: #d93025;
@@ -155,48 +174,43 @@ of the viewport */
   top: 25px;
   white-space: nowrap;
 }
-
 .main input{
   width: 100%;
   border: solid 0.1px rgb(217, 217, 217);
   border-radius: 0px;
 }
-
+/* ************* */
+/* class styling */
+/* ************* */
 .margins
 {
   margin-top: 15px;
   margin-bottom: 15px;
   
 }
-
 .criteria
 {
   font-size: 13px;
 }
-
 .description
 {
   color: rgb(85, 85, 85);
   font-size: 11px;
 }
-
 .padding
 {
   padding-left: 20px;
 }
-
 .description-bold
 {
   color: rgb(119, 119, 119);
   font-size: 13px;
   font-weight: 700;;
 }
-
 .border-bottom
 {
   border-bottom: solid 1px #e4e4e4;
 }
-
 .link a
 {
   color: rgb(17, 34, 204);
